View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029597 | Open CASCADE | OCCT:Data Exchange | public | 2018-03-20 12:55 | 2018-06-29 21:19 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.3.1 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029597: Data Exchange - unable to read VRML2 file | ||||
Description | The file in attachment cannot be read (converted from VRML1 file using vrml1tovrml2.exe tool).@echo off rem Convert all VRML files within specified folder and puts it into "CONVERTED_VRML2" folder rem Syntax: vrml1tovrml2.exe InputFolder=. OutputFolder=CONVERTED_VRML2 set "aResDir=%~dp0CONVERTED_VRML2" if not "%2"=="" set "aResDir=%2" if exist "%aResDir%" rmdir /S /Q "%aResDir%" mkdir "%aResDir%" if not "%1"=="" pushd "%1" for /R %%f in (.\*.wrl) do ( @echo %%~nxf "%~dp0vrml1tovrml2.exe" "%%f" > "%aResDir%\%%~nxf" ) if not "%1"=="" popd "%1" | ||||
Steps To Reproduce | pload VISUALIZATION XDE vclear vinit View1 loadvrml v [locate_data_file bug29597_vrml2.wrl] vdisplay -dispMode 1 v vfit set anArea [triarea v] if { [lindex anArea 0] != 5341500} { puts "Error: unexepected triangulation area" } checktrinfo v -tri 12 -nod 24 | ||||
Tags | No tags attached. | ||||
Test case number | bugs xde bug29597 | ||||
|
bug29597_vrml2.wrl (6,814 bytes) |
|
Branch CR29597 has been created by kgv. SHA-1: 2989541bc617e49673f2894432dc08e9edd35a68 Detailed log of new commits: Author: akz Date: Fri Aug 5 11:24:58 2016 +0300 0029597: Data Exchange - unable to read VRML2 file VrmlData_Scene::createNode() now handles Collision item. VrmlData_ArrayVec3d::ReadArray() now handles a case with ommited brackets. |
|
Patch is ready for review. |
|
One remark: in VrmlData_Geometry.cxx, line 641: it seems that the point should NOT be added to array if its reading fails |
|
> it seems that the point should NOT be added to array if its reading fails As far as I understand, VRML reader is not fail safe - the reading will be aborted on first error. |
|
Branch CR29597_1 has been created by abv. SHA-1: 67453428344bc121bca58865a05c962e804a5ae7 Detailed log of new commits: Author: akz Date: Fri Aug 5 11:24:58 2016 +0300 0029597: Data Exchange - unable to read VRML2 file VrmlData_Scene::createNode() now handles Collision item. VrmlData_ArrayVec3d::ReadArray() now handles a case with omitted brackets. |
|
Branch CR29597_1 has been updated forcibly by abv. SHA-1: a088f717bee41545d2c8ae929130f72a59d2b866 |
|
Reviewed with minor correction, please integrate (branch CR29597_1). Note that the last (forced) commit contains only correction for the new test case; apart of this test that needs a file to be added, build and tests passed indeed -- see Jenkins job CR29597-master-abv |
|
Combination - OCCT branch : CR29597_1 SHA - 67453428344bc121bca58865a05c962e804a5ae7 Products branch : master SHA - d1433da51be7aa6ea5f04a20d332d5b18f879d1f was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian70-64: OCCT Total CPU difference: 18217.710000000123 / 18135.489999999976 [+0.45%] Products Total CPU difference: 7420.750000000001 / 7435.139999999992 [-0.19%] Windows-64-VC10: OCCT Total CPU difference: 17823.36385159844 / 17864.39211459853 [-0.23%] Products Total CPU difference: 8173.001590699962 / 8129.77371359997 [+0.53%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29597 has been deleted by kgv. SHA-1: 2989541bc617e49673f2894432dc08e9edd35a68 |
|
Branch CR29597_1 has been deleted by kgv. SHA-1: a088f717bee41545d2c8ae929130f72a59d2b866 |
occt: master f84d6446 2016-08-05 08:24:58
Committer: bugmaster Details Diff |
0029597: Data Exchange - unable to read VRML2 file VrmlData_Scene::createNode() now handles Collision item. VrmlData_ArrayVec3d::ReadArray() now handles a case with omitted brackets. Added test bugs xde bug29597 |
Affected Issues 0029597 |
|
mod - src/VrmlData/VrmlData_Geometry.cxx | Diff File | ||
mod - src/VrmlData/VrmlData_Group.cxx | Diff File | ||
mod - src/VrmlData/VrmlData_Scene.cxx | Diff File | ||
add - tests/bugs/xde/bug29597 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-03-20 12:55 | kgv | New Issue | |
2018-03-20 12:55 | kgv | Assigned To | => gka |
2018-03-20 12:55 | kgv | File Added: bug29597_vrml2.wrl | |
2018-03-20 12:56 | kgv | Relationship added | related to 0029539 |
2018-03-20 13:10 | kgv | Steps to Reproduce Updated | |
2018-03-20 13:51 | git | Note Added: 0074702 | |
2018-03-20 13:52 | kgv | Note Added: 0074703 | |
2018-03-20 13:52 | kgv | Assigned To | gka => abv |
2018-03-20 13:52 | kgv | Status | new => resolved |
2018-03-20 13:52 | kgv | Description Updated | |
2018-03-20 13:55 | kgv | Product Version | 7.2.0 => 6.3.1 |
2018-03-20 14:19 | kgv | Description Updated | |
2018-03-25 17:45 | abv | Note Added: 0074893 | |
2018-03-25 22:41 | kgv | Note Added: 0074902 | |
2018-03-26 06:56 | git | Note Added: 0074906 | |
2018-03-26 13:54 | git | Note Added: 0074921 | |
2018-03-26 14:00 | abv | Note Added: 0074922 | |
2018-03-26 14:00 | abv | Assigned To | abv => bugmaster |
2018-03-26 14:00 | abv | Status | resolved => reviewed |
2018-03-26 16:34 | bugmaster | Test case number | => bugs xde bug29597 |
2018-03-27 17:31 | bugmaster | Note Added: 0074975 | |
2018-03-27 17:31 | bugmaster | Status | reviewed => tested |
2018-04-11 07:49 | bugmaster | Changeset attached | => occt master f84d6446 |
2018-04-11 07:49 | bugmaster | Status | tested => verified |
2018-04-11 07:49 | bugmaster | Resolution | open => fixed |
2018-04-11 11:00 | git | Note Added: 0075331 | |
2018-04-11 11:00 | git | Note Added: 0075332 | |
2018-06-29 21:14 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |